# learn_rust

./: Cargo.toml
src/: character_type.rs  character_types_2.rs  fancy_printing.rs  lib.rs  main.rs  method.rs  mutability_and_shadowing.rs  primitive_types.rs  rectangles.rs  semicolon_and_unit_type.rs
src/closer/: closer.rs  config.rs  io.rs  iterate.rs  rectangle.rs
src/collection/: hashmap.rs  problems.rs  string.rs  vector.rs
src/enum/: enums.rs
src/error/: panic.rs  panic_or_no_panic.rs
src/func/: func_and_code_blocks.rs  memory_and_ref.rs  print_function.rs
src/generic/: generic_type.rs  generic_type_2.rs  life_time.rs  trait.rs
src/minigrep/: lib.rs  minigrep.rs
src/object/: blog.rs  blog_libs.rs  object_libs.rs
src/pattern/: pattern_matcing.rs
src/smart_pointer/: box.rs  deref.rs  drop.rs  messenger_trait.rs  rc.rs  refcell.rs
src/test/: write_of_test.rs
src/thread/: async.rs  concurrent.rs  message_passing.rs
src/type/: character_types_2.rs  floats_type.rs  string_and_str.rs
src/web/: lib.rs  single.rs
