[package]
name = "learn_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "characterType"
path = "src/character_type.rs"

[[bin]]
name = "privimite_types"
path = "src/primitive_types.rs"

[[bin]]
name = "characterType2"
path = "src/character_types_2.rs"

[[bin]]
name = "floatType"
path = "src/floats_type.rs"

[[bin]]
name = "print"
path = "src/print_function.rs"

[[bin]]
name = "semicolon"
path = "src/semicolon_and_unit_type.rs"

[[bin]]
name = "func"
path = "src/func_and_code_blocks.rs"

[[bin]]
name = "mutability"
path = "src/mutability_and_shadowing.rs"

[[bin]]
name = "memory"
path = "src/memory_and_ref.rs"

[[bin]]
name = "fancy"
path = "src/fancy_printing.rs"

[[bin]]
name = "string"
path = "src/string_and_str.rs"

[[bin]]
name = "rectangle"
path = "src/rectangles.rs"

[[bin]]
name = "method"
path = "src/method.rs"

[[bin]]
name = "enums"
path = "src/enums.rs"

[dependencies]
