[package]
name = "learn_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "characterType"
path = "src/type/character_type.rs"

[[bin]]
name = "privimite_types"
path = "src/type/primitive_types.rs"

[[bin]]
name = "characterType2"
path = "src/type/character_types_2.rs"

[[bin]]
name = "floatType"
path = "src/type/floats_type.rs"

[[bin]]
name = "print"
path = "src/func/print_function.rs"

[[bin]]
name = "semicolon"
path = "src/type/semicolon_and_unit_type.rs"

[[bin]]
name = "func"
path = "src/func/func_and_code_blocks.rs"

[[bin]]
name = "mutability"
path = "src/func/mutability_and_shadowing.rs"

[[bin]]
name = "memory"
path = "src/func/memory_and_ref.rs"

[[bin]]
name = "fancy"
path = "src/print/fancy_printing.rs"

[[bin]]
name = "string"
path = "src/type/string_and_str.rs"

[[bin]]
name = "rectangle"
path = "src/struct/rectangles.rs"

[[bin]]
name = "method"
path = "src/func/method.rs"

[[bin]]
name = "enums"
path = "src/enum/enums.rs"

[[bin]]
name = "vector"
path = "src/collection/vector.rs"

[[bin]]
name = "collection_string"
path = "src/collection/string.rs"

[[bin]]
name = "collection_hashmap"
path = "src/collection/hashmap.rs"

[[bin]]
name = "collection_problems"
path = "src/collection/problems.rs"

[[bin]]
name = "error_can_recovery"
path = "src/error/panic.rs"

[[bin]]
name = "panic_or_no_panic"
path = "src/error/panic_or_no_panic.rs"

[[bin]]
name = "generic_type"
path = "src/generic/generic_type.rs"

[[bin]]
name = "generic_type2"
path = "src/generic/generic_type_2.rs"

[[bin]]
name = "trait"
path = "src/generic/trait.rs"

[[bin]]
name = "lifetime"
path = "src/generic/life_time.rs"

[[bin]]
name = "write_of_test"
path = "src/test/write_of_test.rs"

[[bin]]
name = "minigrep"
path = "src/minigrep/minigrep.rs"

[[bin]]
name = "closer"
path = "src/closer/closer.rs"

[[bin]]
name = "iterate"
path = "src/closer/iterate.rs"

[[bin]]
name = "io"
path = "src/closer/io.rs"

[[bin]]
name = "box"
path = "src/smart_pointer/box.rs"

[[bin]]
name = "deref"
path = "src/smart_pointer/deref.rs"

[[bin]]
name = "drop"
path = "src/smart_pointer/drop.rs"

[[bin]]
name = "rc"
path = "src/smart_pointer/rc.rs"

[[bin]]
name = "refcell"
path = "src/smart_pointer/refcell.rs"

[[bin]]
name = "async"
path = "src/thread/async.rs"

[[bin]]
name = "message_passing"
path = "src/thread/message_passing.rs"

[[bin]]
name = "concurrent"
path = "src/thread/concurrent.rs"

[[bin]]
name = "blog"
path = "src/object/blog.rs"

[[bin]]
name = "pattern"
path = "src/pattern/pattern_matcing.rs"



[dependencies]
rand = "0.8.5"
